# s3-mcp-server

./: .gitignore  README.md  env.example  pyproject.toml
src/: client.py
src/s3_mcp_server/: __init__.py  server.py
src/s3_mcp_server/resources/: s3_resource.py
